--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/volodymyr71/goit-js-hw-11-timer/issues"
   },
-  "homepage": "hhttps://github.com/volodymyr71/goit-js-hw-11-timer#readme",
+  "homepage": "https://github.com/volodymyr71/goit-js-hw-11-timer",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
